# swe-cs

./: .gitignore  LICENSE  Makefile  README.md  django_history.csv  extract_complexity.py  extract_history.py  generate_plots.py  pyproject.toml  report.tex  transformers_history.csv
.github/workflows/: release-report.yml
data/: django_complexity.csv  transformers_complexity.csv  transformers_history.csv
figures/: django_remediation_table.tex  transformers_remediation_table.tex
scripts/: extract_complexity.py  extract_history.py  generate_plots.py  run_pipeline.py
