[project]
name = "swe-cs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lizard>=1.21.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydriller>=2.9",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
